feat(architecture): add Application, Infrastructure and WebApi skeleton

--- a/src/TaskMaster.WebApi/TaskMaster.WebApi.csproj
+++ b/src/TaskMaster.WebApi/TaskMaster.WebApi.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\TaskMaster.Infrastructure\TaskMaster.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
