--- a/src/TaskMaster.WebApi/appsettings.json
+++ b/src/TaskMaster.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TaskMaster": "Data Source=DESKTOP-JDFKGHC\\SQLEXPRESS;Initial Catalog=TaskMasterDb;Integrated Security=true;TrustServerCertificate=true;"
+  }
 }
