--- a/src/TaskMaster.Application/TaskMaster.Application.csproj
+++ b/src/TaskMaster.Application/TaskMaster.Application.csproj
@@ -10,4 +10,17 @@
     <ProjectReference Include="..\TaskMaster.Domain\TaskMaster.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\Behaviors\" />
+    <Folder Include="Projects\Commands\" />
+    <Folder Include="Projects\Queries\" />
+    <Folder Include="Tasks\Commands\" />
+    <Folder Include="Tasks\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+  </ItemGroup>
+
 </Project>
