feat(auth): add Identity, JWT authentication and AuthController

--- a/src/TaskMaster.WebApi/appsettings.json
+++ b/src/TaskMaster.WebApi/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TaskMaster": "Data Source=DESKTOP-JDFKGHC\\SQLEXPRESS;Initial Catalog=TaskMasterDb;Integrated Security=true;TrustServerCertificate=true;"
+  },
+  "Jwt": {
+    "Key": "79xfpBWncHgJLkhIRGZdKS9kuWUAkadS",
+    "Issuer": "TaskMaster",
+    "Audience": "TaskMasterClient",
+    "ExpiresInMinutes": 60
   }
 }
