feat(projects): implement full Projects CQRS pipeline with validation and endpoints

--- a/src/TaskMaster.Application/TaskMaster.Application.csproj
+++ b/src/TaskMaster.Application/TaskMaster.Application.csproj
@@ -12,13 +12,12 @@
 
   <ItemGroup>
     <Folder Include="Common\Behaviors\" />
-    <Folder Include="Projects\Commands\" />
-    <Folder Include="Projects\Queries\" />
     <Folder Include="Tasks\Commands\" />
     <Folder Include="Tasks\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
     <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
   </ItemGroup>
