feat(api): add global exception handling and Serilog logging

--- a/src/TaskMaster.WebApi/appsettings.json
+++ b/src/TaskMaster.WebApi/appsettings.json
@@ -14,5 +14,28 @@
     "Issuer": "TaskMaster",
     "Audience": "TaskMasterClient",
     "ExpiresInMinutes": 60
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7,
+          "shared": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
